<resources>
    <string name="app_name">Football Apps</string>
    <string name="match_detail_title">Match Detail</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_match">Matches</string>
    <string name="title_team">Teams</string>
    <string name="title_favorite">Favorites</string>
    <string name="versus">vs</string>
    <string name="favorite_match_empty_info">There is no favorite match</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="success_added_favorite_match">Added to favorite match</string>
    <string name="success_removed_favorite_match">Removed from favorite match</string>
    <string name="success_added_favorite_team">Added to favorite team</string>
    <string name="success_removed_favorite_team">Removed from favorite team</string>
    <string name="server_error">Sorry, Server error...</string>
    <string name="unknown_error">Sorry, Unknown error...</string>
    <string name="network_error">Sorry, Cannot connect to network...</string>
    <string name="empty_next_match">Next match is empty...</string>
    <string name="empty_player">Player is empty...</string>
    <string name="empty_last_match">Last match is empty...</string>
    <string name="empty_search_match">Match not found...</string>
    <string name="empty_search_form_error">Search form must filled</string>
    <string name="empty_team">Team is empty...</string>
    <string name="empty_search_team">Team not found...</string>
    <string name="next_match_title">Next</string>
    <string name="last_match_title">Last</string>
    <string name="team_overview_title">Overview</string>
    <string name="team_player_title">Players</string>
    <string name="favorite_match_title">Matches</string>
    <string name="favorite_team_title">Teams</string>
    <string name="empty_favorite_match">Favorite match is empty...</string>
    <string name="empty_favorite_team">Favorite team is empty...</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_match_hint">Search Match...</string>
    <string name="search_team_hint">Search Team...</string>
    <string name="clear_menu_item_title">Clear</string>
    <string name="search_menu_item_title">Search</string>
    <string name="refresh_action">Refresh</string>
    <string name="weight">Weight (Kg)</string>
    <string name="height">Height (m)</string>
</resources>
