<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.team.list.TeamFragment">

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_league"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_team"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"/>

    <include layout="@layout/layout_loader"/>

    <include layout="@layout/layout_error"/>

</LinearLayout>